--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,13 @@
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #fff;
+  color: #2e2f42;
+}
+a {
+  text-decoration: none;
+}
+
+ul,
+ol {
+  list-style-type: none;
 }
