--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  font-weight: 400;
   font-style: normal;
+  font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
   background-color: #fff;
@@ -17,6 +17,10 @@ a:hover,
 a:focus {
   color: #404bbf;
 }
+button:hover,
+button:focus {
+  background-color: #404bbf;
+}
 
 ul,
 ol {
@@ -30,6 +34,7 @@ h2 {
 h3 {
   font-weight: 500;
   font-size: 20px;
+  line-height: 1.2;
 }
 
 /* HEADR */
@@ -85,34 +90,49 @@ h3 {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  cursor: pointer;
 }
 .description {
 }
 .descr-title {
+  /* color: #fff; */
 }
 .descr-all-list {
 }
 .descr-list {
 }
 .descr-list-title {
+  /* line-height: 1.2; */
 }
 .descr-list-text {
+  color: #434455;
 }
 .team {
+  background-color: #f4f4fd;
 }
 .team-title {
+  text-align: center;
+  line-height: 1.11;
+  text-transform: capitalize;
 }
 .team-all-list {
 }
 .team-list {
+  background-color: #fff;
 }
 .team-list-title {
+  /* text-align: center; */
+  /* line-height: 1.2; */
 }
-.team-list-descr {
+.team-list-text {
+  color: #434455;
 }
 .portfolio {
 }
 .portfol-title {
+  text-align: center;
+  line-height: 1.11;
+  text-transform: capitalize;
 }
 .portfol-all-list {
 }
@@ -121,10 +141,14 @@ h3 {
 .portfol-list-title {
 }
 .portfol-list-text {
+  color: #434455;
 }
 .footer {
+  background-color: #2e2f42;
 }
 .footer-logo-text {
+  color: #f4f4fd;
 }
 .footer-text {
+  color: #f4f4fd;
 }
