--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   background-color: #fff;
-  color: #2e2f42;
+  color: #434455;
 }
 
 a {
@@ -32,12 +32,14 @@ ol {
 h2 {
   font-weight: 700;
   font-size: 36px;
+  letter-spacing: 0.02em;
 }
 
 h3 {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 /* HEADR */
@@ -47,7 +49,7 @@ h3 {
 }
 .logo-text {
   color: #4d5ae5;
-  font-family: Raleway;
+  font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
@@ -63,12 +65,12 @@ h3 {
   font-weight: 500;
 }
 .address {
+  font-style: normal;
 }
 .address-all-list {
 }
 .address-list {
   color: #434455;
-  font-style: normal;
 }
 .main-page {
 }
@@ -81,11 +83,12 @@ h3 {
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
+  letter-spacing: 0.02em;
 }
 .slogan-button {
   background-color: #4d5ae5;
   color: #fff;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
