--- a/css/styles.css
+++ b/css/styles.css
@@ -30,12 +30,14 @@ ol {
 }
 
 h2 {
+  color: #2e2f42;
   font-weight: 700;
   font-size: 36px;
   letter-spacing: 0.02em;
 }
 
 h3 {
+  color: #2e2f42;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
